--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     }
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "auto-launch": "^5.0.5",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
