--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
       "!dist/*",
       "!frp/*",
       "!.git/*",
-      "!.vscode/*",
-      "frp/readme.md"
+      "!.vscode/*"
     ],
     "publish": [
       {
@@ -87,7 +86,6 @@
     "auto-launch": "^5.0.5",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "colors": "^1.4.0",
     "commander": "^3.0.1",
     "electron-updater": "^4.2.0",
     "express": "^4.17.1",
