--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "build": {
     "appId": "io.fogmachine.app",
     "productName": "Fog Machine",
-    "electronVersion": "6.1.2",
+    "electronVersion": "6.1.3",
     "asar": false,
     "files": [
       "**/*",
@@ -66,6 +66,7 @@
       ]
     },
     "win": {
+      "certificateSubjectName":"Iros Software LLC",
       "files": [
         "frp/fogmachine-ddns-win.exe",
         "servers/minecraft-bedrock/bedrock-server-win.zip",
