--- a/servers/minecraft-java/server.properties
+++ b/servers/minecraft-java/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Sep 28 02:28:15 EDT 2019
+#Tue Nov 05 21:18:35 EST 2019
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
@@ -26,7 +26,7 @@ resource-pack-sha1=
 max-world-size=29999984
 function-permission-level=2
 rcon.port=25575
-server-port=3030
+server-port=1990
 server-ip=
 spawn-npcs=true
 allow-flight=false
@@ -37,10 +37,10 @@ spawn-animals=true
 white-list=false
 rcon.password=
 generate-structures=true
-max-build-height=256
 online-mode=true
+max-build-height=256
 level-seed=
-use-native-transport=true
 prevent-proxy-connections=false
-enable-rcon=false
+use-native-transport=true
 motd=A Minecraft Server
+enable-rcon=false
