--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
       "**/*",
       "!servers/bitwarden/*",
       "servers/bitwarden/web-vault.zip",
-      "servers/bitwarden/.env",
-      "servers/bitwarden/VERSION.md",
+      "servers/bitwarden/template.env",
+      "servers/bitwarden/VERSION.template.md",
+      "servers/bitwarden/WEB-VAULT-VERSION.template.md",
       "!servers/minecraft-bedrock/*",
       "servers/minecraft-bedrock/VERSION.md",
       "!servers/minecraft-java/*",
@@ -66,7 +67,7 @@
       ]
     },
     "win": {
-      "certificateSubjectName":"Iros Software LLC",
+      "certificateSubjectName": "Iros Software LLC",
       "files": [
         "frp/fogmachine-ddns-win.exe",
         "servers/minecraft-bedrock/bedrock-server-win.zip",
@@ -88,6 +89,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "commander": "^3.0.1",
+    "del": "^5.1.0",
     "electron-updater": "^4.2.0",
     "express": "^4.17.1",
     "make-dir": "^3.0.0",
