--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ servers/minecraft-java/*
 !servers/minecraft-java/server.jar
 !servers/minecraft-java/eula.txt
 !servers/minecraft-java/server.properties
-!servers/minecraft-java/VERSION.md
+!servers/minecraft-java/VERSION.template.md
 
 servers/minecraft-bedrock/*
 !servers/minecraft-bedrock/*.zip
