--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "servers/minecraft-java/eula.txt",
       "servers/minecraft-java/server.jar",
       "servers/minecraft-java/server.properties",
-      "servers/minecraft-java/VERSION.md",
+      "servers/minecraft-java/VERSION.template.md",
       "!dist/*",
       "!frp/*",
       "!.git/*",
