--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules/*
 servers/minecraft-java/*
 !servers/minecraft-java/server.jar
 !servers/minecraft-java/eula.txt
-!servers/minecraft-java/server.properties
+!servers/minecraft-java/server.properties.template
 !servers/minecraft-java/VERSION.template.md
 
 servers/minecraft-bedrock/*
