--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "!servers/minecraft-java/*",
       "servers/minecraft-java/eula.txt",
       "servers/minecraft-java/server.jar",
-      "servers/minecraft-java/server.properties",
+      "servers/minecraft-java/server.properties.template",
       "servers/minecraft-java/VERSION.template.md",
       "!dist/*",
       "!frp/*",
