--- a/servers/minecraft-java/server.properties.template
+++ b/servers/minecraft-java/server.properties.template
@@ -3,7 +3,7 @@ spawn-protection=16
 max-tick-time=60000
 query.port=25565
 generator-settings=
-force-gamemode=false
+force-gamemode=true
 allow-nether=true
 enforce-whitelist=false
 gamemode=survival
